alignment and renamed titles and fixed design issues

--- a/app/assets/stylesheets/tab.css
+++ b/app/assets/stylesheets/tab.css
@@ -7,7 +7,7 @@
 	float:left;
 }
 #wrapper_mngr{
-	width:200%; 
+	width:100%; 
 }
 #wrapper h1{
 	color:#FFF;
@@ -254,4 +254,63 @@ padding:10px;
 	width:100px;
 	color:#FFFFFF;
 	padding:2px;
+}
+
+.tab_head_child{
+	background: #f8f8f8; /* Old browsers */
+	background: -moz-linear-gradient(top, #f8f8f8 8%, #ededed 75%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(8%,#f8f8f8), color-stop(75%,#ededed)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #f8f8f8 8%,#ededed 75%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #f8f8f8 8%,#ededed 75%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, #f8f8f8 8%,#ededed 75%); /* IE10+ */
+	background: linear-gradient(to bottom, #f8f8f8 8%,#ededed 75%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f8f8f8', endColorstr='#ededed',GradientType=0 ); /* IE6-9 */
+	height:15px;
+	padding:5px;
+	border:solid 1px #dfdfdf;
+	text-shadow: 2px 2px 2px #FFFFFF;
+    filter: dropshadow(color=#FFFFFF, offx=3, offy=1);
+	color:#666666;
+	font-weight:bold;
+	border-radius:6px 6px 0 0;
+	}
+.descr_txt_exp_child { 
+	max-width:470px;
+	width:470px;
+	min-width:130px;
+	font-family:Arial, Helvetica, sans-serif;
+	font-size:11px;
+	color: #333333;
+	padding-left:5px;
+	padding:1px;
+	padding-left:5px;
+	margin-top:4px;
+	padding-top:4px;
+}
+.descrpn_name_child{
+	font-weight:bold;
+	text-shadow: 2px 2px 2px #FFFFFF;
+    filter: dropshadow(color=#FFFFFF, offx=3, offy=1);
+	font-size:11px;
+	margin-left:17px;
+	margin-top:10px;
+	border:solid 1px #dfdfdf;
+	border-radius: 6px 6px 0 0;
+	border-top: none;
+
+}
+.dspnd_right{ 
+	background-image:url(../images/sprites.png);
+	background-position: -536px -60px;
+	width: 8px;
+	height: 14px;
+	float: right;
+}
+.dspnd_right:hover { 
+	background-image:url(../images/sprites.png);
+	background-position: -550px -60px;
+	width: 8px;
+	height: 14px;
+	cursor:pointer;
+	z-index:5;
 }
